<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startpageHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/startpage_header_text"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/startpageOverviewText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/startpageOverviewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/interlight"
        android:text="@string/startpage_overview_text"
        android:textAlignment="center"
        android:textColor="#DCD7DE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/startpageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startpageButton"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/intermedium"
        android:onClick="openNextPage"
        android:text="@string/startpage_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>