<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:elevation="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainpageHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/mainpage_header_text"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mainpageMenuButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black"
        android:contentDescription="@string/desc_menu_button"
        android:onClick="openConfigPage"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mainpageHeaderText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <TextView
        android:id="@+id/mainpageParagraphText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="156dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/mainpage_subheader_text"
        android:textColor="#BACBF7"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainpageHeaderText" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mainpage_swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainpageParagraphText">

        <LinearLayout
            android:id="@+id/treeCards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainpage_card1"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/card_background"
                android:elevation="8dp"
                android:padding="18dp"
                android:rotationX="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/card1Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card1_header"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/card1Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#212436"
                    android:contentDescription="@string/mainpage_card1_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mainpage_button" />

                <ProgressBar
                    android:id="@+id/card1TempBar1"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_line_bme1"
                    app:layout_constraintEnd_toStartOf="@+id/card1Button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1Measure1" />

                <ProgressBar
                    android:id="@+id/card1TempBar2"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_line_bme2"
                    app:layout_constraintEnd_toStartOf="@+id/card1Button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1Measure2" />

                <ProgressBar
                    android:id="@+id/card1TempBar3"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_line_bme3"
                    app:layout_constraintEnd_toStartOf="@+id/card1Button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1Measure3" />

                <TextView
                    android:id="@+id/card1Measure1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card1_default_text1"
                    android:textColor="#BB86FC"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1Header" />

                <TextView
                    android:id="@+id/card1Measure2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card1_default_text2"
                    android:textColor="#86FCA9"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1TempBar1" />

                <TextView
                    android:id="@+id/card1Measure3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card1_default_text3"
                    android:textColor="#B3C5F5"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card1TempBar2" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainpage_card2"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/card_background"
                android:elevation="8dp"
                android:padding="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainpage_card1">

                <TextView
                    android:id="@+id/card2Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card2_header"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/card2Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#212436"
                    android:contentDescription="@string/mainpage_card2_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mainpage_button" />

                <ProgressBar
                    android:id="@+id/card2TempBar1"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_line_mhz1"
                    app:layout_constraintEnd_toStartOf="@+id/card2Button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card2Measure1" />

                <ProgressBar
                    android:id="@+id/card2TempBar2"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_line_mhz2"
                    app:layout_constraintEnd_toStartOf="@+id/card2Button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card2Measure2" />

                <TextView
                    android:id="@+id/card2Measure1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card2_default_text1"
                    android:textColor="#FF77F8"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card2Header" />

                <TextView
                    android:id="@+id/card2Measure2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/intersemibold"
                    android:text="@string/mainpage_card2_default_text2"
                    android:textColor="#BACBF7"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card2TempBar1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/lastUpdateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/intermedium"
                android:text="@string/last_update_string"
                android:textColor="#B3FFFFFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainpage_card2" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>