<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ConfigPageActivity">

    <TextView
        android:id="@+id/configpageHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/configpage_header_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:fontFamily="@font/intersemibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/configpageField1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/intermedium"
        android:text="@string/configpage_field1"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageHeaderText" />

    <EditText
        android:id="@+id/configpageField1Et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:autofillHints=""
        android:textCursorDrawable="@drawable/color_cursor"
        android:padding="8dp"
        android:fontFamily="@font/interregular"
        android:background="@drawable/edittext_selector"
        android:ems="10"
        android:digits="0123456789."
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField1Text" />

    <TextView
        android:id="@+id/configpageField2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/intermedium"
        android:text="@string/configpage_field2"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField1Et" />

    <EditText
        android:id="@+id/configpageField2Et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:padding="8dp"
        android:ems="10"
        android:fontFamily="@font/interregular"
        android:inputType="number"
        android:autofillHints=""
        android:background="@drawable/edittext_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField2Text" />

    <TextView
        android:id="@+id/configpageField3Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/intermedium"
        android:text="@string/configpage_field3_text"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField2Et" />

    <EditText
        android:id="@+id/configpageField3Et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:padding="8dp"
        android:ems="10"
        android:fontFamily="@font/interregular"
        android:autofillHints=""
        android:background="@drawable/edittext_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField3Text" />

    <TextView
        android:id="@+id/configpageField4Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/intermedium"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:text="@string/configpage_field4_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField3Et" />

    <EditText
        android:id="@+id/configpageField4Et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:padding="8dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:ems="10"
        android:fontFamily="@font/interregular"
        android:autofillHints=""
        android:background="@drawable/edittext_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configpageField4Text" />

    <Button
        android:id="@+id/configpageButton"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:onClick="openMainPage"
        android:layout_marginBottom="42dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/intermedium"
        android:text="@string/configpage_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>